# ModbusToDB

./: .gitignore  CMakeLists.txt  README.md  config.json  config.json.example  modbus_rtu_to_postgresql_data_logger_18f988fa.plan.md  modbuslogger.service  project_request.md
.cache/clangd/index/: ConfigParser.cpp.17E1D76E11DB4484.idx  ConfigParser.h.71DECB6B10F89BA7.idx  DataProcessor.cpp.A1440542986B37F1.idx  DataProcessor.h.B467A0B6AD082BD3.idx  DatabaseManager.cpp.8F43BCF980EFD292.idx  DatabaseManager.h.601BF6E1FB4E6986.idx  Main.cpp.2FAA6CF3B41777B8.idx  ModbusClient.cpp.03A9AE9359FC1E05.idx  ModbusClient.h.ADCD45D5862E6382.idx  RegisterResolver.cpp.82E5CED0C861C578.idx  RegisterResolver.h.CE46048B78A1F750.idx  SchemaManager.cpp.EE530946BC30774A.idx  SchemaManager.h.0F2D730053288013.idx  Types.h.C1872A12D548D7BF.idx
Excel/: import_excel.py  requirements.txt
Excel/excel_files/: 2401298435-2026-01-11,2026-01-11.xlsx
sql/: daily_tariff_report.sql  dilay_tariff_report.sql  f_get_eprice.sql  f_last_value_at.sql  f_parameterHistory.sql  f_periodStat.sql  f_periodValues.sql  f_period_diff.sql  f_tariff_zone.sql  inverter_1h.sql  inverter_1m.sql  inverter_tariff_stats.sql  modbus_data.sql
src/: ConfigParser.cpp  ConfigParser.h  DaemonManager.cpp  DaemonManager.h  DataProcessor.cpp  DataProcessor.h  DatabaseManager.cpp  DatabaseManager.h  Main.cpp  ModbusClient.cpp  ModbusClient.h  PeriodParser.cpp  PeriodParser.h  PeriodicScheduler.cpp  PeriodicScheduler.h  RegisterResolver.cpp  RegisterResolver.h  SchemaManager.cpp  SchemaManager.h  Types.h
